--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@ Date: 2021-12-?
     - Added experimental sound for corrosion. Unintentionally was synced with Factorio vanilla animation :-)
     - Removed chunk alignment for Rampant new enemies mode creep protection. 2 chunks radius.
     - Balance. 7 biomass units for every 2 military science packs. I gather up to 1200 biomass from one biters base (~11 nests, ~12 worms) - quite a lot even for double tech cost difficulty.
+    - IndustrialRevolution2 compatibility added. Not sure that I got mod idea properly (military science is available only in midgame, not many tech&items depend on it). Who plays with IR2, pls give feedback.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.1
 Date: 2021-12-05
