--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.2
-Date: 2021-12-?
+Date: 2021-12-06
   Changes:
     - API-triggered creep generation changed to work slower in queue. Thanks a lot to Veden! That should be a performance fix for late game with 1k+ Rampant nests/worms on map.
     - Added distinctive sound for creep collecting blocked by natives nearby.
