--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.2
+Date: 2021-12-13
+  Changes:
+    - Improved creep footprint generation (optimized and higher diversity in distal tiles).
+    - All creep generation changes and features (changes 1.1.2-1.2.2) became available in games with no Rampant mod or with disabled its New Enemies mode.
+---------------------------------------------------------------------------------------------------
 Version: 1.2.1
 Date: 2021-12-12
   Changes:
