changed fake creep icon, increased biomass use

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.5
+Date: 2021-12-20
+  Changes:
+    - Changed icon for fake creep
+    - 8 biomass to 1 biters research
+---------------------------------------------------------------------------------------------------
 Version: 1.2.4
 Date: 2021-12-19
   Changes:
