--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,11 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.5
-Date: 2021-12-20
+Date: 2022-01-11
   Changes:
-    - Changed icon for fake creep
-    - 8 biomass to 1 biters research
+    - Changed icon for fake creep for shovel and deconstruction.
+    - 8 biomass to 1 biters research.
+    - Creep generation optimizations and balancing for casual and new enemies games.
+    - Biters research pack crafting fix (Thanks to DimmuR). Pyanodons mods compatibility verified.
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.4
 Date: 2021-12-19
