--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,21 @@
 ---------------------------------------------------------------------------------------------------
-Version: 1.3.0
+Version: 1.3.1
 Date: 2022-0?-?
+  Changes:
+      - Bio-remnants item introduced. Has 30% chance to be gathered from biter creep type-2. Has fuel value of 1MJ and high emissions rate.
+      Later can be bio-processed into sulphuric acid in complex recipe (Bio-lab is required) - can incorporate it into recipes of other mods if needed.
+      - Creep miner buildings were completely re-designed. Removed all complex entities.
+      I had to kill ItemCollector mod idea inside me to give chest configuration freedom and avoid all limitations&inconveniences.
+      Any existing chest in nearby radius (4 tiles vertical/horizontal range from building center, 3 tiles diagonal range) will be found on-the-fly and selected.
+      Player has enough time for it even while in battle (How? See below).
+      Player can remove/add/replace chests anytime. Any chest with any internal/circuit/logistics options will do (but it must have place to store biomass).
+      Nearest one of better logistics type ("provider") is selected. One chest can be used by many creep miners. 
+      Miners without chest remove only creep type-2 (wasting all obtained bio-remnants). Burner miner tries to store bio-remnants in its burner slots to ease early game.
+      Burner miner searches for chemical fuel in that chest (not in other nearby chests!) before searching for player and steal from his inventory in nearby range.
+      - Burner miner prefers fuel with less emission to avoid natives attention whenever possible.
+---------------------------------------------------------------------------------------------------
+Version: 1.3.0
+Date: 2022-01-19
   Changes:
       - Creep miner buildings introduced. Chemical fuel energy based and Electric energy based. Graphics for them was taken from Amator Phasma Coal&Steam and Yuoki Industries mods.
       First one is portable and self re-fueling from player inventory. Second one has bigger reach area, more power-hungry and produce pollution only on creep excavation.
@@ -10,7 +25,7 @@ Date: 2022-0?-?
       - Creep generation balance. One more attempt to avoid too much biomass for 200%+ enemy bases density.
       - Creep pollution absorption increased from 5 to 10 dead trees per tile for Deathworld mode and Creeper mod balance.
       - Creep retaliation strikes feature introduced in raw version. Turn on/off with command (look for it in readme).
-      Description: Biters counterattack with creep-2 deploying shells for big-range attacks on their bases (three levels depending on distance) after evolution exceeds 35%.
+      Description: Biters counter attack with creep-2 deploying shells for big-range attacks on their bases (three levels depending on distance) after evolution exceeds 35%.
       Everything (including player and vehicles) in target area receives some acid+physical damage (grows with evo) and creep stays on the ground to be collected.
       Area size and target accuracy depend on attacking object distance from enemy base.
       - Halved evo progression of creep corrosion DoT, because creep miners are not so fast with removing creep if it's artillery autofire and buildings loose too much hitpoints sometimes.
