--- a/changelog.txt
+++ b/changelog.txt
@@ -1,18 +1,19 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.1
-Date: 2022-0?-?
+Date: 2022-01-21
   Changes:
-      - Bio-remnants item introduced. Has 30% chance to be gathered from biter creep type-2. Has fuel value of 1MJ and high emissions rate.
+      - Bio residue item introduced. Has 30% chance to be gathered from biter creep type-2. Has fuel value of 1MJ and high emissions rate.
       Later can be bio-processed into sulphuric acid in complex recipe (Bio-lab is required) - can incorporate it into recipes of other mods if needed.
       - Creep miner buildings were completely re-designed. Removed all complex entities.
       I had to kill ItemCollector mod idea inside me to give chest configuration freedom and avoid all limitations&inconveniences.
-      Any existing chest in nearby radius (4 tiles vertical/horizontal range from building center, 3 tiles diagonal range) will be found on-the-fly and selected.
-      Player has enough time for it even while in battle (How? See below).
+      Any existing chest in nearby radius (4 tiles vertical/horizontal range from building center, 3 tiles diagonal range) will be found on-the-fly and automatically used.
+      Player has enough time for installing it even while in battle (How? See below).
       Player can remove/add/replace chests anytime. Any chest with any internal/circuit/logistics options will do (but it must have place to store biomass).
-      Nearest one of better logistics type ("provider") is selected. One chest can be used by many creep miners. 
+      Nearest one of better logistics type ("provider") is preferred. One chest can be used by many creep miners. 
       Miners without chest remove only creep type-2 (wasting all obtained bio-remnants). Burner miner tries to store bio-remnants in its burner slots to ease early game.
       Burner miner searches for chemical fuel in that chest (not in other nearby chests!) before searching for player and steal from his inventory in nearby range.
-      - Burner miner prefers fuel with less emission to avoid natives attention whenever possible.
+      - Burner miner select to take fuel with less emission when stealing from chest/player to avoid natives attention whenever possible.
+      - Not sure about old 1.2.* game saves support.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.0
 Date: 2022-01-19
@@ -30,6 +31,7 @@ Date: 2022-01-19
       Area size and target accuracy depend on attacking object distance from enemy base.
       - Halved evo progression of creep corrosion DoT, because creep miners are not so fast with removing creep if it's artillery autofire and buildings loose too much hitpoints sometimes.
       Also it will make turret creep easier in early-mid game for not big fans of RTS games :-) .
+      - Not sure about old 1.2.* game saves support.
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.5
