--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.2
+Date: 2022-01-24
+  Changes:
+      - Reduced burner creep miner energy consumption to make 1 residue item energy enough for one remove creep iteration.
+      - Burner creep miner will gather all collected residue (if any!) in current iteration in its fuel slots when no fuel is left and nowhere to take.
+      - Fixed issue: Burner creep miner searched for fuel too often when it is already out of energy. Now will do it only once per 20 seconds.
+      - Slightly increased burner creep miner building recipe cost.
+      - Minor fixes.
+---------------------------------------------------------------------------------------------------
 Version: 1.3.1
 Date: 2022-01-21
   Changes:
@@ -10,7 +19,7 @@ Date: 2022-01-21
       Player has enough time for installing it even while in battle (How? See below).
       Player can remove/add/replace chests anytime. Any chest with any internal/circuit/logistics options will do (but it must have place to store biomass).
       Nearest one of better logistics type ("provider") is preferred. One chest can be used by many creep miners. 
-      Miners without chest remove only creep type-2 (wasting all obtained bio-remnants). Burner miner tries to store bio-remnants in its burner slots to ease early game.
+      Miners without chest remove only creep type-2 (wasting all obtained bio-remains). Burner miner tries to store bio-remains in its burner slots to ease early game.
       Burner miner searches for chemical fuel in that chest (not in other nearby chests!) before searching for player and steal from his inventory in nearby range.
       - Burner miner select to take fuel with less emission when stealing from chest/player to avoid natives attention whenever possible.
       - Flying text hints are added to give a clue why miner paused removing creep in its range. Can be turned off with /disable-creepminer-hints command.
