--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@ Date: 2022-01-24
       - Burner creep miner will gather all collected residue (if any!) in current iteration into its fuel slots when no fuel is left and nowhere to take.
       - Fixed issue: Burner creep miner searched for fuel too often when it is already out of energy. Now will do it only once per 20 seconds.
       - Balance. Halved pollution created by creep excavation. Slightly increased burner creep miner building recipe cost.
+      - Old gamesaves support added. For games started with Warmonger prior to 1.2.4 and especially older than 1.2.2 a new game (new map generation) is recommended to fix creep balance.
       - Minor fixes.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.1
