bio-remains emissions down to 2.4

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.4
+Date: 2022-01-?
+  Changes:
+      - Balance. 240% emissions multiplier for bio residue.
+---------------------------------------------------------------------------------------------------
 Version: 1.3.3
 Date: 2022-01-25
   Changes:
