--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.6
+Date: 2022-02-
+  Changes:
+      - Added special effects to revenge creep strikes for better understanding what happened.
+      - All damage effects and creep deploy take place only after shell lands, therefore moving player, car, tank and even spidertron can easily avoid it.
+      - For closer combat it's cannon shell mechanics, so revenge can be stopped by a rock or a tree (direct damage is too small to pierce even these objects).
+---------------------------------------------------------------------------------------------------
 Version: 1.3.5
 Date: 2022-02-01
   Changes:
