--- a/changelog.txt
+++ b/changelog.txt
@@ -3,8 +3,8 @@ Version: 1.3.6
 Date: 2022-02-
   Changes:
       - Added special effects to revenge creep strikes for better understanding what happened.
-      - All damage effects and creep deploy take place only after shell lands, therefore moving player, car, tank and even spidertron can easily avoid it.
-      - For closer combat it's cannon shell mechanics, so revenge can be stopped by a rock or a tree (direct damage is too small to pierce even these objects).
+      - All damage effects and creep deploy take place only after shell lands, therefore moving player, car, tank and even spidertron can easily avoid damage.
+      - Fixed a few issues for creep strikes.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.5
 Date: 2022-02-01
