--- a/changelog.txt
+++ b/changelog.txt
@@ -3,8 +3,9 @@ Version: 1.3.6
 Date: 2022-02-
   Changes:
       - Added special effects to revenge creep strikes for better understanding what happened.
-      - All damage effects and creep deploy take place only after shell lands, therefore moving player, car, tank and even spidertron can easily avoid damage.
+      - All damage effects and creep deploy take place only after shell lands. So moving player, car, tank and even spidertron can easily avoid damage.
       - Fixed a few issues for creep strikes.
+      - Fixed rails collision with creep. Now they can co-exist (and rails are affected by corrosion).
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.5
 Date: 2022-02-01
