--- a/changelog.txt
+++ b/changelog.txt
@@ -1,14 +1,15 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.8
-Date: 2022-03-?
+Date: 2022-04-?
   Changes:
       - Mod settings were added. Biters reseach pack recipe default is 7. Please use value 4 for double technology price or when playing less aggressive enemies worlds.
       To change startup setting Factorio app restart is required. Saved games will use it at next load.
       - Creep miner goes to sleep immediately on last creep tile harvested.
-      - Corrosion marginal case fix
-      - +0.5% corrosion DoT
-      - Less painful corrosion strikes
-      - Fixed circle render radius for creep miners
+      - Corrosion marginal case fix.
+      - +0.5% corrosion DoT.
+      - Less painful corrosion strikes: less damage, less often.
+      - Fixed circle rendering radius for creep miners.
+      - Poison capsule biomass cost was halved.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.7
 Date: 2022-02-06
