--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.9
-Date: 2022-05-?
+Date: 2022-05-08
   Changes:
       - Creep miners range circle render improved: miners ghosts ranges are shown, creep meter in hands unhides this rendering too.
       - Creep miner has got a limit of tiles excavation queue in standby reserve.
