--- a/changelog.txt
+++ b/changelog.txt
@@ -1,10 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.10
-Date: 2022-05-?
+Date: 2022-05-16
   Changes:
       - Creep miner pollution re-design. Emission takes place while miner is working, not at the moment of creep excavation.
-      Customized miner pollution coefficient setting value should be set Startup settings manually.
-      - Fixed incorrect order of checks for triggered effects to catch only counter strikes.
+      Customized miner pollution coefficient setting value (recommended for DeathWorld games) can be done in Startup settings.
+      - Fixed false counter strikes triggered effects.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.9
 Date: 2022-05-08
