--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,11 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.11
-Date: 2022-07-24
+Date: 2022-07-25
   Changes:
       - Warfare expandables (capsules and other RA/RI mods staff) recipes switched from biomass to bio residue.
-      - Fixed bio residue pictures.
+      - A small buff to bio residue income from creep type-2.
+      - Fixed bio residue pictures (previously was shown as biomass on belts).
+      - Minor fixes.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.10
 Date: 2022-05-16
