--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.12
+Date: 2022-08-08
+  Changes:
+      - Support for normal/expensive military science pack recipe.
+---------------------------------------------------------------------------------------------------
 Version: 1.3.11
 Date: 2022-07-25
   Changes:
