--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.13
+Date: 2022-08-18
+  Changes:
+      - Burner creep miner auto refuelling is optional now (turn it off in mod map options to have better controlled creep excavation)
+      - Counter strikes got some more live action (why not?). Rampant Arsenal medics still require some fixes.
+---------------------------------------------------------------------------------------------------
 Version: 1.3.12
 Date: 2022-08-08
   Changes:
