--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.14
+Date: 2022-09-08
+  Changes:
+      - Corrosion DoT reduced.
+      - Creep type-1 collecting limitations are re-made to be more flexible and funny:
+      The same blocking protection is applied now as for creep type-2, but excavating it near enemy buildings can provoke defensive attacks.
+  Bugfixes:
+      - Counter strike corrosion is now engaging player's buildings via creep collision instead of landed strike explosion radius
+---------------------------------------------------------------------------------------------------
 Version: 1.3.13
 Date: 2022-08-18
   Changes:
